k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beatsight
  labels:
    app.kubernetes.io/name: beatsight
    app.kubernetes.io/part-of: beatsight
